fixed scrolling issue & left bar visibility issues

--- a/src/Styles/LeftBar.css
+++ b/src/Styles/LeftBar.css
@@ -1,7 +1,7 @@
 #LeftBar{
     height: 100vh;
     width: 243px;
-    z-index: 10;
+    z-index: 22;
     background-color: rgb(251, 251, 251);
     position: fixed;
     top: 56px;
